[package]
name = "rustracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
cliclack = "0.1.9"
colored = "2.1.0"
crossterm = "0.27.0"
get_if_addrs = "0.5.3"
rand = "0.8.5"
ratatui = { version = "0.24.0", features = ["crossterm"] }
reqwest = { version = "0.11.22", features = ["json"] }
rustscan = "2.1.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = {version = "1.12.0", features = ["full"]}
